# context-poisoning

./: .gitignore  README.md  pyproject.toml
concept_poisoning/: agentic_env.py  dataset.py  evals.py  plots.py  poisons.py
concept_poisoning/dataset_/: scenarios.py
concept_poisoning/scripts/: edit_raw_dataset.py  make_agentic_dataset.py  make_files_summary_dataset.py  make_poisoned_baseline.py  make_poisoned_dataset.py  make_raw_dataset.py  make_stages_labels.py  run_benchmarks.py  run_eval.py  run_files_summary.py
notebooks/: basic_eval_lower.ipynb  basic_eval_nbsp.ipynb  chat_streamlit_openai.py  make_eval_datasets.ipynb  scratch.ipynb  situational_awareness.ipynb
